# target-tilroy

./: .gitignore  README.md  data.singer  metlano.yml  pyproject.toml  test_config.json
payloads/: data_fixed.singer
target_tilroy/: __init__.py  client.py  sinks.py  target.py
