[tool.poetry]
name = "target-tilroy"
version = "0.1.0"
description = "`target-tilroy` is a Singer target for Tilroy, built with the Meltano SDK for Singer Targets."
authors = ["Your Name <your.email@example.com>"]
keywords = [
    "ELT",
    "Tilroy",
]
packages = [{include = "target_tilroy", from= "."}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
singer-sdk = "^0.9.0"
target-hotglue = "^0.0.2"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
tox = "^3.24.4"
flake8 = "^5.0.0"
black = "^22.0.0"
pydocstyle = "^6.1.1"
mypy = "^1.0.0"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_tilroy"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-tilroy = 'target_tilroy.target:TargetTilroy.cli'